footer layout shift fix

--- a/src/Media.css
+++ b/src/Media.css
@@ -319,8 +319,16 @@
   .SingleSliderContainer .slick-next:before{
     opacity: 0.7;
   }
+  .logo-wrapper {
+    height: 60px;
+  }
   .content-wrapper {
-      margin-bottom: 30px;
+    min-height: 63px;
+    padding-bottom: 30px;
+  }
+
+  .footer_copy_content_right .justify-content-end {
+      justify-content: space-evenly !important;
   }
   .footerLogoBx{
     min-height: 155px;
